--- a/index.html
+++ b/index.html
@@ -57,14 +57,16 @@
   </header>
   <nav>
     <div class="dropdown">
-      <a href="#" class="dropdown">Case Files</a>
-      <div class="dropdown-content">
-        <a href="https://zenodo.org/records/15110322" target="_blank">Zacharia Ali</a>
-        <a href="Melissa Caddick.pdf" target="_blank">Melissa Caddick</a>
-        <a href="Brittany Dawn.pdf" target="_blank">Britni Dawn</a>
-        <a href="LaShonda Greene.pdf" target="_blank">LaShonda Green</a>
-        <a href="Jay Mazini.pdf" target="_blank">Jay Manzini</a>
-        <a href="#">Kevin Trudeau</a>
+  <a href="#" class="dropdown">Case Files</a>
+  <div class="dropdown-content">
+    <a href="https://zenodo.org/records/15110322" target="_blank">Zacharia Ali</a>
+    <a href="Melissa%20Caddick.pdf" target="_blank">Melissa Caddick</a>
+    <a href="Brittany%20Dawn.pdf" target="_blank">Britni Dawn</a>
+    <a href="LaShonda%20Greene.pdf" target="_blank">LaShonda Green</a>
+    <a href="Jay%20Mazini.pdf" target="_blank">Jay Manzini</a>
+    <a href="Kevin%20Trudeau.pdf" target="_blank">Kevin Trudeau</a>
+  </div>
+</div>
       </div>
     </div>
     <div class="dropdown">
@@ -93,11 +95,12 @@
       </div>
     </div>
     <div class="dropdown">
-      <a href="#" class="dropdown">Resources & Guides</a>
-      <div class="dropdown-content">
-        <a href="How_to_Read_a_Court_Docket.pdf" target="_blank">How to Read a Court Docket</a>
-        <a href="Predatory_Patterns.pdf" target="_blank">Scammer Tactics</a>
-        <a href="Due_Diligence_101_PublicRecordsWatch.pdf" target="_blank">Due Diligence 101</a>
+<a href="#" class="dropdown">Resources & Guides</a>
+<div class="dropdown-content">
+  <a href="How%20to%20Read%20a%20Court%20Docket.pdf" target="_blank">How to Read a Court Docket</a>
+  <a href="Predatory%20Patterns.pdf" target="_blank">Scammer Tactics</a>
+  <a href="Due%20Diligence%20101-Public%20Records%20Watch%202025.pdf" target="_blank">Due Diligence 101</a>
+</div>
       </div>
     </div>
     <div class="dropdown">
