--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
     <div class="dropdown">
 <a href="#" class="dropdown">Resources & Guides</a>
 <div class="dropdown-content">
-  <a href="How%20to%20Read%20a%20Court%20Docket.pdf" target="_blank">How to Read a Court Docket</a>
-  <a href="Predatory%20Patterns.pdf" target="_blank">Scammer Tactics</a>
-  <a href="Due%20Diligence%20101-Public%20Records%20Watch%202025.pdf" target="_blank">Due Diligence 101</a>
+<a href="How_to_Read_a_Court_Docket.pdf" target="_blank">How to Read a Court Docket</a>
+<a href="Predatory_Patterns.pdf" target="_blank">Scammer Tactics</a>
+<a href="Due_Diligence_101_Public_Records_Watch_2025.pdf" target="_blank">Due Diligence 101</a>
 </div>
       </div>
     </div>
