--- a/index.html
+++ b/index.html
@@ -121,12 +121,13 @@
       <input type="text" placeholder="Search case summaries, entity names, or keywords...">
     </div>
 
-    <div class="notice-box">
-     Looking for structured reports? Our longform dossiers are hosted on 
-<a href="https://zenodo.org/record/15110322" target="_blank">Zenodo</a>, 
-<a href="https://osf.io/mquaz/" target="_blank">OSF</a>, and 
-<a href="https://figshare.com/articles/preprint/Zacharia_Ali_Civil_Entity_and_Court_Records_2012_2024_/25857498" target="_blank">Figshare</a> 
-for citation and academic access. Visit the <strong>Dossier Access</strong> tab to explore them.
+<div class="notice-box">
+  Looking for structured reports? Our longform dossiers are hosted on 
+  <a href="https://zenodo.org/record/15110322" target="_blank">Zenodo</a>, 
+  <a href="https://osf.io/mquaz/" target="_blank">OSF</a>, and 
+  <a href="https://figshare.com/articles/preprint/Zacharia_Ali_Civil_Entity_and_Court_Records_2012_2024_/25857498" target="_blank">Figshare</a> 
+  for citation and academic access. Visit the <strong>Dossier Access</strong> tab to explore them.
+</div>
 
     <div class="section-box">
       <h2>Litigation Archive | Public Records Repository</h2>
