--- a/index.html
+++ b/index.html
@@ -123,9 +123,9 @@
 
 <div class="notice-box">
   Looking for structured reports? Our longform dossiers are hosted on 
-  <a href="https://zenodo.org/record/15110322" target="_blank">Zenodo</a>, 
-  <a href="https://osf.io/mquaz/" target="_blank">OSF</a>, and 
-  <a href="https://figshare.com/articles/preprint/Zacharia_Ali_Civil_Entity_and_Court_Records_2012_2024_/25857498" target="_blank">Figshare</a> 
+  <a href="https://zenodo.org/records/15110322" target="_blank">Zenodo</a>, 
+  <a href="https://osf.io/u93eh/" target="_blank">OSF</a>, and 
+  <a href="https://figshare.com/articles/dataset/_i_Litigation_Profile_Zacharia_Ali_Civil_Records_Public_Filings_2012_2024_i_/28692731?file=53430971" target="_blank">Figshare</a> 
   for citation and academic access. Visit the <strong>Dossier Access</strong> tab to explore them.
 </div>
 
