--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         <a href="#">Fraud in the Wellness & Coaching Industry</a>
       </div>
     </div>
-    <a href="#">Contact Us</a>
+    <p>Contact: publicrecordswatch (at) proton (dot) me</p>
   </nav>
 
   <div class="container">
