--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         <a href="#">Fraud in the Wellness & Coaching Industry</a>
       </div>
     </div>
-    <p>Contact: publicrecordswatch (at) proton (dot) me</p>
+    <a href="#" onclick="alert('Contact: publicrecordswatch (at) proton (dot) me'); return false;">Contact Us</a>
   </nav>
 
   <div class="container">
