--- a/index.html
+++ b/index.html
@@ -113,9 +113,8 @@
         <a href="#">Fraud in the Wellness & Coaching Industry</a>
       </div>
     </div>
-    <a href="#" onclick="alert('Contact: publicrecordswatch (at) proton (dot) me'); return false;">Contact Us</a>
-  </nav>
-
+   <a href="#contact-info">Contact Us</a>
+    
   <div class="container">
     <div class="search-bar">
       <input type="text" placeholder="Search case summaries, entity names, or keywords...">
@@ -157,7 +156,7 @@
 
       <p><strong>Contact:</strong> publicrecordswatch (at) proton (dot) me</p>
     </div>
-
+<p id="contact-info">Contact: publicrecordswatch (at) proton (dot) me</p>
     <div class="share-links">
       📩 Share Public Records Watch:
       <a href="#">Twitter</a> |
