--- a/index.html
+++ b/index.html
@@ -154,9 +154,8 @@
 
       <p>All materials are grounded in public record, with no intent to defame or accuse—only to provide reliable, accessible documentation for professional reference.</p>
 
-      <p><strong>Contact:</strong> publicrecordswatch (at) proton (dot) me</p>
+   <p id="contact-info"><strong>Contact:</strong> publicrecordswatch (at) proton (dot) me</p>
     </div>
-<p id="contact-info">Contact: publicrecordswatch (at) proton (dot) me</p>
     <div class="share-links">
       📩 Share Public Records Watch:
       <a href="#">Twitter</a> |
